# pyvrs

./: .gitmodules  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  pixi.toml  release_utils.py  setup.py  version.txt
.github/ISSUE_TEMPLATE/: Bugs.md
.github/workflows/: build-and-test.yml  deploy.yml  publish-website.yml  release.yml
cmake/: FindEigen.cmake  FindOcean.cmake  LibrariesSetup.cmake
csrc/: Pybind11.cpp  VrsBindings.cpp  VrsBindings.h
csrc/filter/: Filter.cpp  Filter.h  OssAsyncImageFilter.cpp  OssAsyncImageFilter.h  OssPyImageFilter.cpp  OssPyImageFilter.h  PyImageFilter.cpp  PyImageFilter.h
csrc/reader/: AsyncVRSReader.cpp  AsyncVRSReader.h  FactoryHelper.hpp  FilteredFileReader.h  MultiVRSReader.cpp  MultiVRSReader.h  Reader.cpp  Reader.h  VRSReader.cpp  VRSReader.h  VRSReaderBase.h
csrc/utils/: PyBuffer.cpp  PyBuffer.h  PyExceptions.cpp  PyExceptions.h  PyFileSpec.cpp  PyFileSpec.h  PyRecord.cpp  PyRecord.h  PyUtils.cpp  PyUtils.h  Utils.cpp
csrc/writer/: PyDataPiece.h  PyGenericWriter.h  PyRecordable.cpp  PyRecordable.h  StreamFactory.cpp  StreamFactory.h  VRSWriter.cpp  VRSWriter.h  Writer.cpp  Writer.h
csrc/writer/datalayouts/: Annotations.cpp  Annotations.h  AriaGen2ImageDataLayout.cpp  AriaGen2ImageDataLayout.h  SampleDataLayout.cpp  SampleDataLayout.h
docs/pyvrs/source/: conf.py
docs/source/: conf.py  index.rst
docs/source/modules/: index.rst  writer.rst
pyvrs/: __init__.py  base.py  datalayout.py  filter.py  reader.py  record.py  record_filter.py  slice.py  utils.py  writer.py
scripts/: build-macos-arm64-package.sh  install-macos-deps.sh  install-manylinux-deps.sh
test/: pyvrs_async_reader_test.py  pyvrs_generic_writer_test.py  pyvrs_reader_test.py  pyvrs_utils_test.py  pyvrs_writer_test.py
